.provarCaches/00D6C0000000xA6UAI/objects/sked__Resource_Requirement_Tag__c.object
<CustomObject>
    <fields>
        <fullName>sked__Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Resource_Requirement__c</fullName>
        <label>Resource Requirement</label>
        <referenceTo>sked__Resource_Requirement__c</referenceTo>
        <relationshipLabel>Resource Requirement Tags</relationshipLabel>
        <relationshipName>Resource_Requirement_Tags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>sked__Tag__c</referenceTo>
        <relationshipLabel>Resource Requirement Tags</relationshipLabel>
        <relationshipName>Resource_Requirement_Tags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sked__Weighting__c</fullName>
        <label>Weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Resource Requirement Tag</label>
    <nameField>
        <displayFormat>RRT-{0000}</displayFormat>
        <label>Resource Requirement Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requirement Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>